--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,6 @@
 version: "3.7"
 
 services:
-  
   postgres:
     build: './database'
     environment:
@@ -9,18 +8,15 @@ services:
       POSTGRES_PASSWORD: mysecretpassword
       POSTGRES_DB: mydb
     restart: always
-  
   nats:
     image: "nats-streaming:0.9.2"
     restart: always
-
   elasticsearch:
     image: "docker.elastic.co/elasticsearch/elasticsearch:6.2.3"
     environment:
       - "discovery.type=single-node"
-
   feed:
-    image: "."
+    build: "."
     command: "feed-service"
     depends_on:
       - "postgres"
@@ -32,7 +28,6 @@ services:
       POSTGRES_PASSWORD: mysecretpassword
       POSTGRES_DB: mydb
       NATS_ADDRESS: "nats:4222"
-
   query:
     build: "."
     command: "query-service"
@@ -43,12 +38,11 @@ services:
     ports:
       - "3000"
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: mysecretpassword
-      POSTGRES_DB: mydb
-      NATS_ADDRESS: "nats:4222"
-      ELASTICSEARCH_ADDRESS: "elasticsearch:9200"
-
+        POSTGRES_USER: postgres
+        POSTGRES_PASSWORD: mysecretpassword
+        POSTGRES_DB: mydb
+        NATS_ADDRESS: "nats:4222"
+        ELASTICSEARCH_ADDRESS: "elasticsearch:9200"
   pusher:
     build: "."
     command: "pusher-service"
@@ -58,9 +52,8 @@ services:
       - "3000"
     environment:
       NATS_ADDRESS: "nats:4222"
-
   nginx:
-    image: "./nginx"
+    build: "./nginx"
     ports:
       - "3000:80"
     depends_on:
